<resources>

    <string name="app_name">Clock</string>
    <string name="start">START</string>
    <string name="timer">TIMER</string>
    <string name="pause">PAUSE</string>
    <string name="reset">RESET</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="alarm">ALARM</string>
    <string name="time">TIME</string>
    <string name="delete">DELETE</string>
    <string name="stopwatch">STOPWATCH</string>
    <string name="repeating">REPEATING</string>
    <string name="vibration">VIBRATION</string>
    <string name="add_alarm">ADD ALARM</string>
    <string name="back">BACK</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

</resources>
